# LangChain-tryout

./: .env  .envrc  .gitignore  flake.nix  notes.org  predict.py
devshell-00/: flake.nix  pyproject.toml
lm-app-simple-00/: .envrc  flake.nix  lm-app-simple-00.py  notes.org  pyproject.toml
personal-asistant/: notes.org
