[tool.poetry]
name = "devshell-00"
version = "0.1.0"
description = ""
authors = ["Handol Park <handolpark12@gmail.com>"]
readme = "README.md"
packages = [{include = "devshell_00"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.135"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
