# [[file:notes.org::*Development Environment][Development Environment:3]]
[tool.poetry]
name = "lm-app-simple-00"
version = "0.1.0"
description = ""
authors = ["Handol Park <handolpark12@gmail.com>"]
readme = "README.md"
packages = [{include = "lm-app-simple-00.py", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.135"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# Development Environment:3 ends here
